tests/ui/closures/2229_closure_analysis/preserve_field_drop_order.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/preserve_field_drop_order.rs:23:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/preserve_field_drop_order.rs:50:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/preserve_field_drop_order.rs:77:13
   |
LL |     let c = #[rustc_capture_analysis]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: First Pass analysis includes:
  --> $DIR/preserve_field_drop_order.rs:27:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", a.0);
...  |
LL | |     };
   | |_____^
   |
note: Capturing a[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:30:26
   |
LL |         println!("{:?}", a.0);
   |                          ^^^
note: Capturing a[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:33:26
   |
LL |         println!("{:?}", a.1);
   |                          ^^^
note: Capturing b[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:37:26
   |
LL |         println!("{:?}", b.0);
   |                          ^^^
note: Capturing b[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:40:26
   |
LL |         println!("{:?}", b.1);
   |                          ^^^

error: Min Capture analysis includes:
  --> $DIR/preserve_field_drop_order.rs:27:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", a.0);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture a[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:30:26
   |
LL |         println!("{:?}", a.0);
   |                          ^^^
note: Min Capture a[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:33:26
   |
LL |         println!("{:?}", a.1);
   |                          ^^^
note: Min Capture b[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:37:26
   |
LL |         println!("{:?}", b.0);
   |                          ^^^
note: Min Capture b[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:40:26
   |
LL |         println!("{:?}", b.1);
   |                          ^^^

error: First Pass analysis includes:
  --> $DIR/preserve_field_drop_order.rs:54:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", a.1);
...  |
LL | |     };
   | |_____^
   |
note: Capturing a[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:57:26
   |
LL |         println!("{:?}", a.1);
   |                          ^^^
note: Capturing a[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:60:26
   |
LL |         println!("{:?}", a.0);
   |                          ^^^
note: Capturing b[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:64:26
   |
LL |         println!("{:?}", b.1);
   |                          ^^^
note: Capturing b[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:67:26
   |
LL |         println!("{:?}", b.0);
   |                          ^^^

error: Min Capture analysis includes:
  --> $DIR/preserve_field_drop_order.rs:54:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", a.1);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture a[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:60:26
   |
LL |         println!("{:?}", a.0);
   |                          ^^^
note: Min Capture a[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:57:26
   |
LL |         println!("{:?}", a.1);
   |                          ^^^
note: Min Capture b[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:67:26
   |
LL |         println!("{:?}", b.0);
   |                          ^^^
note: Min Capture b[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:64:26
   |
LL |         println!("{:?}", b.1);
   |                          ^^^

error: First Pass analysis includes:
  --> $DIR/preserve_field_drop_order.rs:81:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", b.1);
...  |
LL | |     };
   | |_____^
   |
note: Capturing b[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:84:26
   |
LL |         println!("{:?}", b.1);
   |                          ^^^
note: Capturing a[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:87:26
   |
LL |         println!("{:?}", a.1);
   |                          ^^^
note: Capturing a[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:90:26
   |
LL |         println!("{:?}", a.0);
   |                          ^^^
note: Capturing b[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:94:26
   |
LL |         println!("{:?}", b.0);
   |                          ^^^

error: Min Capture analysis includes:
  --> $DIR/preserve_field_drop_order.rs:81:5
   |
LL | /     || {
LL | |
LL | |
LL | |         println!("{:?}", b.1);
...  |
LL | |     };
   | |_____^
   |
note: Min Capture b[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:94:26
   |
LL |         println!("{:?}", b.0);
   |                          ^^^
note: Min Capture b[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:84:26
   |
LL |         println!("{:?}", b.1);
   |                          ^^^
note: Min Capture a[(0, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:90:26
   |
LL |         println!("{:?}", a.0);
   |                          ^^^
note: Min Capture a[(1, 0)] -> Immutable
  --> $DIR/preserve_field_drop_order.rs:87:26
   |
LL |         println!("{:?}", a.1);
   |                          ^^^

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0658`.
